added images, finished html basic markup and css base grid

--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
           class="header-profile-bell-img"
           alt="bell icon"
         />
-        <img src="" alt="" />
+        <div class="header-profile-img">
+          <img
+            src="img/faceoff-cage2.jpg"
+            alt="Nick Cage after doing copious amounts of cocaine"
+          />
+        </div>
         <p class="header-profile-username">Nicholas Cage</p>
       </div>
       <div class="header-welcome">
-        <img src="" alt="" />
+        <img
+          src="img/faceoff-cage1.jpg"
+          alt="A very sober looking Nicholas Cage in the film Face-Off"
+        />
         <div class="welcome-text-container">
           <p class="welcome-small-text">Hi there,</p>
           <p class="welcome-large-text">John Travolta (@xenu1337)</p>
@@ -107,7 +115,7 @@
       </li>
     </nav>
 
-    <main class="main">
+    <main>
       <section class="projects">
         <h3 class="projects-title">Your Projects</h3>
 
@@ -200,7 +208,7 @@
             </button>
           </div>
         </div>
-        
+
         <div class="projects-card">
           <div class="projects-card-text">
             <h4 class="projects-card-title"></h4>
@@ -216,6 +224,85 @@
             <button class="projects-card-button">
               <img src="img/share-network.svg" alt="share icon" />
             </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="announcements">
+        <h3 class="announcements-title">Announcements</h3>
+        <div class="announcements-container">
+          <div class="announcements-element">
+            <p class="announcements-bold-text"></p>
+            <p class="announcements-description-text"></p>
+          </div>
+          <div class="announcements-element">
+            <div class="announcements-element">
+              <p class="announcements-bold-text"></p>
+              <p class="announcements-description-text"></p>
+            </div>
+          </div>
+          <div class="announcements-element">
+            <div class="announcements-element">
+              <p class="announcements-bold-text"></p>
+              <p class="announcements-description-text"></p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="trending">
+        <h3 class="trending-title">Trending</h3>
+        <div class="trending-container">
+          <div class="trending-element">
+            <div class="trending-em-img">
+              <img
+                src="img/grindhouse.jpg"
+                alt="Nick Cage as Fu Manchu in the filme Grindhouse"
+              />
+            </div>
+            <div class="trending-em-text">
+              <p class="trending-username">@FuManchu</p>
+              <p class="trending-description">
+                <a
+                  href="https://www.youtube.com/watch?v=8AMiGIzoeBg"
+                  target="_blank"
+                  >Cinema Finder</a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="trending-element">
+            <div class="trending-em-img">
+              <img src="img/con-air.jpg" alt="Nick cage in black and white" />
+            </div>
+            <div class="trending-em-text">
+              <p class="trending-username">@CameronPoe</p>
+              <p class="trending-description">Flight Tracker</p>
+            </div>
+          </div>
+          <div class="trending-element">
+            <div class="trending-em-img">
+              <img
+                src="img/wicker-man.jpg"
+                alt="Nick Cage before he comes into contact with his favourite insect"
+              />
+            </div>
+            <div class="trending-em-text">
+              <p class="trending-username">@EdwardMalus</p>
+              <p class="trending-description">Bee Avoidance Planner</p>
+            </div>
+          </div>
+          <div class="trending-element">
+            <div class="trending-em-img">
+              <img
+                src="img/john-travolta.jpeg"
+                alt="John Travolta with a giant shit eating grin"
+              />
+            </div>
+            <div class="trending-em-text">
+              <p class="trending-username">@CastorTroy</p>
+              <p class="trending-description">Face Swap App</p>
+            </div>
           </div>
         </div>
       </section>
