stylings for nav

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <nav role="navigation">
       <div class="nav-title">
         <img src="img/diamonds-four.svg" alt="icon of 4 diamonds" />
-        <h1 class="nav-title">Dashboard</h1>
+        <h1 class="nav-title-text">Dashboard</h1>
       </div>
       <ul class="nav-main-icons-container">
         <li class="nav-icon">
@@ -97,22 +97,23 @@
           ><span class="nav-text">Communities</span>
         </li>
       </ul>
-      <ul class="nav-secondary-icons-container"></ul>
-      <li class="nav-icon">
-        <a href="#" class="nav-link"
-          ><img src="img/gear.svg" alt="home icon" /></a
-        ><span class="nav-text">Settings</span>
-      </li>
-      <li class="nav-icon">
-        <a href="#" class="nav-link"
-          ><img src="img/info.svg" alt="home icon" /></a
-        ><span class="nav-text">Support</span>
-      </li>
-      <li class="nav-icon">
-        <a href="#" class="nav-link"
-          ><img src="img/lock.svg" alt="home icon" /></a
-        ><span class="nav-text">Privacy</span>
-      </li>
+      <ul class="nav-secondary-icons-container">
+        <li class="nav-icon">
+          <a href="#" class="nav-link"
+            ><img src="img/gear.svg" alt="home icon" /></a
+          ><span class="nav-text">Settings</span>
+        </li>
+        <li class="nav-icon">
+          <a href="#" class="nav-link"
+            ><img src="img/info.svg" alt="home icon" /></a
+          ><span class="nav-text">Support</span>
+        </li>
+        <li class="nav-icon">
+          <a href="#" class="nav-link"
+            ><img src="img/lock.svg" alt="home icon" /></a
+          ><span class="nav-text">Privacy</span>
+        </li>
+      </ul>
     </nav>
 
     <main>
