main section styling & basic button toggle js

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     </header>
 
     <nav role="navigation">
+      <div class="nav-hamburger" id="nav-hamburger">
+        <i class='bx bx-menu'></i>
+      </div>
       <div class="nav-title">
         <i class="bx bxs-dashboard"></i>
         <h1 class="nav-title-text">Dashboard</h1>
@@ -120,31 +123,13 @@
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
-              <i class='bx bx-star'></i>
+              <i class="bx bx-star"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
+              <i class="bx bx-bullseye"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
-            </button>
-          </div>
-        </div>
-
-        <div class="projects-card">
-          <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
-          </div>
-          <div class="projects-card-button-container">
-            <button class="projects-card-button">
-              <i class='bx bx-star'></i>
-            </button>
-            <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
-            </button>
-            <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
+              <i class="bx bxs-share-alt"></i>
             </button>
           </div>
         </div>
@@ -156,31 +141,13 @@
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
-              <i class='bx bx-star'></i>
+              <i class="bx bx-star"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
+              <i class="bx bx-bullseye"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
-            </button>
-          </div>
-        </div>
-
-        <div class="projects-card">
-          <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
-          </div>
-          <div class="projects-card-button-container">
-            <button class="projects-card-button">
-              <i class='bx bx-star'></i>
-            </button>
-            <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
-            </button>
-            <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
+              <i class="bx bxs-share-alt"></i>
             </button>
           </div>
         </div>
@@ -192,13 +159,13 @@
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
-              <i class='bx bx-star'></i>
+              <i class="bx bx-star"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
+              <i class="bx bx-bullseye"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
+              <i class="bx bxs-share-alt"></i>
             </button>
           </div>
         </div>
@@ -210,13 +177,49 @@
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
-              <i class='bx bx-star'></i>
+              <i class="bx bx-star"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bx-bullseye'></i>
+              <i class="bx bx-bullseye"></i>
             </button>
             <button class="projects-card-button">
-              <i class='bx bxs-share-alt'></i>
+              <i class="bx bxs-share-alt"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="projects-card">
+          <div class="projects-card-text">
+            <h4 class="projects-card-title"></h4>
+            <p class="projects-card-description"></p>
+          </div>
+          <div class="projects-card-button-container">
+            <button class="projects-card-button">
+              <i class="bx bx-star"></i>
+            </button>
+            <button class="projects-card-button">
+              <i class="bx bx-bullseye"></i>
+            </button>
+            <button class="projects-card-button">
+              <i class="bx bxs-share-alt"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="projects-card">
+          <div class="projects-card-text">
+            <h4 class="projects-card-title"></h4>
+            <p class="projects-card-description"></p>
+          </div>
+          <div class="projects-card-button-container">
+            <button class="projects-card-button">
+              <i class="bx bx-star"></i>
+            </button>
+            <button class="projects-card-button">
+              <i class="bx bx-bullseye"></i>
+            </button>
+            <button class="projects-card-button">
+              <i class="bx bxs-share-alt"></i>
             </button>
           </div>
         </div>
@@ -225,20 +228,29 @@
       <section class="announcements">
         <h3 class="announcements-title">Announcements</h3>
         <div class="announcements-container">
-          <div class="announcements-element">
-            <p class="announcements-bold-text"></p>
-            <p class="announcements-description-text"></p>
+          <div class="announcements-element announcements-element-one">
+            <p class="announcements-bold-text">Announcement 1</p>
+            <p class="announcements-description-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
+              asperiores, eligendi nam reiciendis esse magni.
+            </p>
           </div>
           <div class="announcements-element">
             <div class="announcements-element">
-              <p class="announcements-bold-text"></p>
-              <p class="announcements-description-text"></p>
+              <p class="announcements-bold-text">Announcement 2</p>
+              <p class="announcements-description-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
+                asperiores, eligendi nam reiciendis esse
+              </p>
             </div>
           </div>
           <div class="announcements-element">
             <div class="announcements-element">
-              <p class="announcements-bold-text"></p>
-              <p class="announcements-description-text"></p>
+              <p class="announcements-bold-text">Announcement 3</p>
+              <p class="announcements-description-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
+                asperiores, eligendi nam reiciendis esse
+              </p>
             </div>
           </div>
         </div>
