added basic darkmode toggle

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <nav role="navigation">
       <div class="nav-hamburger" id="nav-hamburger">
-        <i class='bx bx-menu'></i>
+        <i class="bx bx-menu"></i>
       </div>
       <div class="nav-title">
         <i class="bx bxs-dashboard"></i>
@@ -108,6 +108,13 @@
         <li class="nav-icon">
           <a href="#" class="nav-link"><i class="bx bx-lock"></i></a
           ><span class="nav-text">Privacy</span>
+        </li>
+        <li class="nav-icon darkmode-wrapper">
+            <button class="darkmode-switch">
+              <i class='bx bx-moon'></i>
+              <i class='bx bx-sun'></i>
+            </button>
+          <span class="nav-text">Dark/Light</span>
         </li>
       </ul>
     </nav>
