updated main styles and html text

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           class="header-search-input"
           id="search"
           name="search"
+          placeholder="search..."
         />
       </div>
       <div class="header-user-profile">
@@ -110,10 +111,9 @@
           ><span class="nav-text">Privacy</span>
         </li>
         <li class="nav-icon darkmode-wrapper">
-            <button class="darkmode-switch">
-              <i class='bx bx-moon'></i>
-              <i class='bx bx-sun'></i>
-            </button>
+          <button class="darkmode-switch">
+            <i class="bx bx-sun" id="darkmodeIcon"></i>
+          </button>
           <span class="nav-text">Dark/Light</span>
         </li>
       </ul>
@@ -125,8 +125,11 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
+            <h4 class="projects-card-title">Willy's Wonderland</h4>
+            <p class="projects-card-description">
+              Nicolas Cage fights a demonically-possessed alligator mascot with
+              a mop. What more could you possibly ask for?
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -143,8 +146,11 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
+            <h4 class="projects-card-title">Pig</h4>
+            <p class="projects-card-description">
+              A touching meditation on grief and a critique of the high-end
+              restaurant scene.
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -161,8 +167,12 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
+            <h4 class="projects-card-title">Bad Lieutenant</h4>
+            <p class="projects-card-description">
+              It's like watching a classic cop movie. Except all the actors are
+              on crack, the writers were fueled by crack and all the
+              production team & director were also on crack.
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -179,7 +189,7 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
+            <h4 class="projects-card-title">Face/Off</h4>
             <p class="projects-card-description"></p>
           </div>
           <div class="projects-card-button-container">
